# 0VRW4TCH

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
0VRW4TCH.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
adk_config/: orchestrator_config.yaml  runtime_config.yaml
agents/: __init__.py  root_agent.py  stages.py
agents/action/config_manager/: agent.py  (+1 more)
autonomous_secops_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: constants.py  security_config.py  settings.py
config/environments/: development.yaml  production.yaml  staging.yaml
config/policies/: compliance_policies.yaml  guardrails.yaml  security_policies.yaml
data/: adk_sessions.db
deployment/: README.md
deployment/docker/: Dockerfile.agent  Dockerfile.network_monitor  Dockerfile.platform
docs/: RUNNING.md
docs/adk_integration/: adapter_notes.md  adk_docs_knowledge_base.md
docs/architecture/: agent_specifications.md  communication_patterns.md  overview.md
overwatch_platform/api/: chat.py  dashboard.py  main.py
overwatch_platform/orchestrator/: cli.py  orchestrator.py  overwatch.py  runner_factory.py
overwatch_platform/security/: auth_service.py  vault_client.py
scripts/: run_network_monitor.py
scripts/deployment/: deploy_agents.sh  deploy_platform.sh  rollback.sh
scripts/monitoring/: agent_health_check.py  system_diagnostics.py
scripts/setup/: install_adk.sh  setup_databases.sh  setup_dev_env.sh
scripts/testing/: load_test.sh
secops_platform/api/: main.py
secops_platform/orchestrator/: health_monitor.py  orchestrator.py  runner_factory.py  scheduler.py
secops_platform/security/: audit_logger.py
shared/adk/: audit_plugin.py  memory.py  observability.py  settings.py
shared/database/: cache_store.py  graph_store.py  relational_store.py  timeseries_store.py
shared/models/: __init__.py  action.py  asset.py  contracts.py  incident.py  message.py  vulnerability.py
shared/security/: __init__.py  mock_signals.py  models.py  policy_loader.py
shared/security_tools/: __init__.py  code_executor.py  common.py  linux_command.py  reasoning.py  ssh_command.py
shared/tools/: asset_discovery_tools.py  cloud_tools.py  kubernetes_tools.py  monitoring_tools.py  notification_tools.py  security_tools.py  system_analyzer_tools.py
shared/utils/: config.py  encryption.py  env.py  logging.py  metrics.py  terminal_ui.py
tests/integration/: base.py  runner.py
(+119 files in other folders)
