[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "0VRW4TCH"
version = "0.1.0"
description = "Autonomous multi-agent security and operations platform"
requires-python = ">=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "greenlet>=3.3.1",
    "fastapi>=0.110",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "google-adk",
    "httpx>=0.26",
    "kafka-python>=2.0",
    "neo4j>=5.19",
    "opentelemetry-api>=1.23",
    "opentelemetry-sdk>=1.23",
    "prometheus-client>=0.20",
    "psycopg[binary]>=3.1",
    "pydantic>=2.6",
    "python-dotenv>=1.0",
    "pytest>=7.4",
    "pyyaml>=6.0",
    "redis>=5.0",
    "requests>=2.31",
    "ruff>=0.4",
    "uvicorn[standard]>=0.27",
    "dotenv>=0.9.9",
]

[tool.setuptools.packages.find]
include = ["agents*", "shared*", "secops_platform*"]
exclude = ["tests*", "deployment*", "config*", "data*", "docs*", "scripts*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
